# RobotKinematics

./: .gitignore  README.md  readme.md
al5d/: CMakeLists.txt
al5d/config/: config.ini  config_generated.ini  config_sim.ini
al5d/include/al5d/: Application.h  Controller.h  Joint.h  SSC32UCommandBuilder.ipp
al5d/src/: Application.cpp  Communicator.cpp  Controller.cpp  Joint.cpp
al5d_stub/: CMakeLists.txt  package.xml
al5d_stub/config/: config.ini
al5d_stub/include/al5d_stub/: SerialCommunicator.h  Stoppable.h
al5d_stub/src/: SerialCommunicator.cpp
color_calibration/: CMakeLists.txt  package.xml
color_calibration/include/: ColorCalibration.h
color_calibration/src/: ColorCalibration.cpp  main.cpp
docker/: Makefile  README.md  docker-compose-cross-platform.yml  docker-compose-linux.yml  docker-compose.yml
docker/app/: Dockerfile
docker/image/: Dockerfile
docker/image/scripts/: rk_entrypoint.sh  run_rk.sh
docker/novnc/: Dockerfile
docker/novnc/.fluxbox/: apps
docker/novnc/.supervisord/: supervisord.conf
docker/remote/: Dockerfile  docker-compose.yml
docker/remote/scripts/: rk_entrypoint.sh
robothli/: CMakeLists.txt  package.xml  run_sim.launch
robothli/config/: config.ini  config_sim.ini
robothli/include/robothli/: Application.h  Communicator.h  GradientDescent.h  GradientDescent.ipp  Matrix.h  Point.h  Point.ipp  Pose.h  Pose.ipp  RobotModel.ipp
robothli/src/: Al5D.cpp  Application.cpp  Communicator.cpp  Joint.cpp  KinematicChain.cpp  main.cpp
robothli/test/: Joint_test.cpp
scripts/: al5d_plotter.py  run.sh  run_sim.sh
serial_forwarder/include/serial_forwarder/: Publisher.h
serial_forwarder/src/: Publisher.cpp  SerialPort.cpp
src/al5d/: CMakeLists.txt  package.xml
src/al5d/action/: MoveRobot.action
src/al5d/config/: config.ini
src/al5d/include/al5d/: Communicator.h  Controller.h
src/al5d/src/: Controller.cpp  Joint.cpp  main.cpp
src/robothli/: CMakeLists.txt
src/robothli/action/: PickUpObject.action
src/robothli/config/: config.ini
src/robothli/include/robothli/: Al5D.h  Application.h  GradientDescent.h  GradientDescent.ipp  KinematicChain.h  Matrix.ipp  Pose.h  Pose.ipp  RobotModel.h
src/robothli/src/: Application.cpp  Joint.cpp  main.cpp
src/robothli/test/: KinematicChain_test.cpp  Matrix_test.cpp  Point_test.cpp  Pose_test.cpp
src/tui/: package.xml
src/tui/docs/html/: graph_legend.html  index.html  main_8cpp.html
src/tui/docs/latex/: refman.tex
src/utilities/include/utilities/: LogLevel.h
src/utilities/src/: IniParser.cpp  LogToFile.cpp
src/world/config/: config.ini
src/world/include/: SearchQuery.h
src/world/include/Color/: ColorRange.h
src/world/include/Sensor/: Sensor.h
src/world/include/Shape/: AbstractShape.h  ShapeFinder.h
src/world/msg/: Shape.msg
src/world/src/Color/: ColorFilter.cpp
src/world/src/ShapeFinder/: ShapeFinder.cpp
tui/: CMakeLists.txt  Doxyfile  package.xml
tui/config/: config.ini
tui/docs/html/: files.html
tui/docs/latex/: main_8cpp.tex
tui/include/tui/: Application.h  ChooseShapeMode.h  Communicator.h  DevelopMode.h  InteractiveMode.h  MainMenu.h  Mode.h  PickUpBlockMode.h  SequenceMode.h  SinglePositionMode.h
tui/msg/: Shape.msg
tui/src/: Application.cpp  ChooseShapeMode.cpp  Communicator.cpp  DevelopMode.cpp  FindShapeMode.cpp  InteractiveMode.cpp  MainMenu.cpp  Mode.cpp  PickUpBlockMode.cpp  SequenceMode.cpp  SinglePositionMode.cpp  main.cpp
utilities/: CMakeLists.txt
utilities/include/utilities/: LogToFile.h
utilities/src/: LogToCout.cpp  LogToFile.cpp
workspace/src/al5d/: package.xml
workspace/src/al5d/config/: config.ini  config_sim.ini
workspace/src/al5d/include/al5d/: Application.h  Controller.h  SSC32UCommandBuilder.h  SSC32UCommandBuilder.ipp  SerialCommunicator.h
workspace/src/al5d/src/: Application.cpp  Controller.cpp  SerialCommunicator.cpp  main.cpp
workspace/src/al5d_simulation/launch/: al5d_simulation.launch
workspace/src/color_calibration/src/: main.cpp
workspace/src/robothli/: CMakeLists.txt
workspace/src/robothli/action/: MoveRobot.action
workspace/src/robothli/config/: config_sim.ini
workspace/src/robothli/include/robothli/: Communicator.h  Joint.h  (+6 more)
workspace/src/robothli/src/: Communicator.cpp  Joint.cpp
workspace/src/robothli/test/: GradientDescent_test.cpp  Joint_test.cpp  KinematicChain_test.cpp  Point_test.cpp  Pose_test.cpp
workspace/src/serial_forwarder/: CMakeLists.txt  package.xml
workspace/src/serial_forwarder/include/serial_forwarder/: Forwarder.h  SerialPort.h
workspace/src/serial_forwarder/src/: Forwarder.cpp  SerialPort.cpp  main.cpp
workspace/src/tui/: CMakeLists.txt  package.xml
workspace/src/tui/action/: PickUpObject.action
workspace/src/tui/config/: config.ini
workspace/src/tui/include/tui/: Application.h  ChooseShapeMode.h  Communicator.h  DevelopMode.h  FindShapeMode.h  Mode.h  SequenceMode.h  SinglePositionMode.h
workspace/src/tui/msg/: Shape.msg
workspace/src/tui/src/: Application.cpp  Communicator.cpp  DevelopMode.cpp  FindShapeMode.cpp  MainMenu.cpp  SequenceMode.cpp  SinglePositionMode.cpp
workspace/src/tui/srv/: ShapeFinderService.srv
workspace/src/utilities/: CMakeLists.txt  package.xml
workspace/src/utilities/include/utilities/: IniParser.h  LogLevel.h  LogOutput.h  LogToCout.h  Logger.h
workspace/src/utilities/src/: Logger.cpp
workspace/src/world/: CMakeLists.txt  package.xml
workspace/src/world/config/: config.ini
workspace/src/world/msg/: Shape.msg
workspace/src/world/src/: WorldService.cpp
workspace/src/world/srv/: ShapeFinderService.srv
world/: CMakeLists.txt  package.xml
world/config/: config.ini  config_sim.ini
world/include/Calibration/: ArucoCalibration.h
world/include/Sensor/: CameraSensor.h  Sensor.h  SensorException.h
world/include/Shape/: AbstractShape.h  CircleShape.h  RectShape.h  SquareShape.h
world/include/ShapeFinder/: ShapeFinder.h
world/src/: WorldService.cpp
world/src/Calibration/: ArucoCalibration.cpp
world/src/Color/: ColorFilter.cpp
world/src/ShapeFinder/: OldShapeFinder.cpp  ShapeFinder.cpp
(+10 files in other folders)
