<package format="2">
  <name>robothli</name>
  <version>0.0.1</version>
    <description>
        High Level robot interface
    </description>
  <maintainer email="DAM.Wiegerinck@student.han.nl">Derk Wiegerinck</maintainer>
    <license>todo</license>

    <author>Derk Wiegerinck</author>

  <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>

    <build_depend>message_generation</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <doc_depend>doxygen</doc_depend>
</package>