<?xml version="1.0"?>
<package format="2">
  <name>al5d</name>
  <version>0.0.1</version>
  <description>The al5d package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="DAM.Wiegerinck@student.han.nl">Derk Wiegerinck</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

    <author>Derk Wiegerinck</author>

  <buildtool_depend>catkin</buildtool_depend>

    <depend>roscpp</depend>
    <depend>utilities</depend>

    <build_depend>message_generation</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>actionlib</build_depend>
    <build_depend>actionlib_msgs</build_depend>
    <build_depend>std_msgs</build_depend>
    <exec_depend>actionlib</exec_depend>
    <exec_depend>actionlib_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <doc_depend>doxygen</doc_depend>
</package>
