<package format="2">
  <name>serial_forwarder</name>
  <version>0.0.1</version>
  <description>
    High Level robot interface
  </description>
  <maintainer email="DAM.Wiegerinck@student.han.nl">Derk Wiegerinck</maintainer>
  <license>todo</license>

  <author>Derk Wiegerinck</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>utilities</depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <doc_depend>doxygen</doc_depend>
</package>